Implement more of the lexer and create exception classes.

--- a/statelang/CMakeLists.txt
+++ b/statelang/CMakeLists.txt
@@ -1,4 +1,5 @@
 set(SRC
+    src/exception.hpp
     src/lexer.hpp
     src/lexer.cpp
     src/statelang.cpp
@@ -6,6 +7,11 @@ set(SRC
 )
 
 add_library(statelang SHARED ${SRC})
+
+set_target_properties(statelang PROPERTIES
+    CXX_STANDARD          11
+    CXX_STANDARD_REQUIRED ON
+)
 
 install(TARGETS statelang
     RUNTIME DESTINATION bin
